# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
name = "apt-transport-blob"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft Corporation"]
license = "MIT"
homepage = "https://github.com/microsoft/apt-transport-blob"
repository = "https://github.com/microsoft/apt-transport-blob"
description = "apt-transport-blob"

[[bin]]
name = "blob"
path = "src/main.rs"

[dependencies]
azure_identity = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
bytes = "1.6.0"
log = "0.4.20"
nom = "7.1.3"
simple-log = "1.6.0"
syslog = "6.1.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[dev-dependencies]
env_logger = "0.11.3"
tempfile = "3.10.0"

[profile.release]
# Optimise for size
opt-level = "z"
overflow-checks = true

# Optimise size across all crates by doing link-time optimisation across all
# crates, and using 1 codegen unit to give the linker maximum opportunity to
# optimise.
lto = "fat"
codegen-units = 1

[package.metadata.deb]
assets = [
  ["target/release/blob", "usr/lib/apt/methods/blob", "755"],
]
