# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
name = "apt-transport-blob"
version = "0.2.0"
edition = "2021"
authors = ["Microsoft Corporation"]
license = "MIT"
homepage = "https://github.com/microsoft/apt-transport-blob"
repository = "https://github.com/microsoft/apt-transport-blob"
description = "apt-transport-blob"

[[bin]]
name = "blob"
path = "src/main.rs"

[dependencies]
azure_identity = "0.21.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
bytes = "1.8.0"
log = "0.4.22"
log4rs = { version = "1.3.0", default-features = false, features=["file_appender", "pattern_encoder"]}
nom = "7.1.3"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"

[dev-dependencies]
env_logger = "0.11.5"
tempfile = "3.13.0"

[profile.release]
# Optimise for size
opt-level = "z"
overflow-checks = true

# Optimise size across all crates by doing link-time optimisation across all
# crates, and using 1 codegen unit to give the linker maximum opportunity to
# optimise.
lto = "fat"
codegen-units = 1

[package.metadata.deb]
assets = [
  ["target/release/blob", "usr/lib/apt/methods/blob", "755"],
]
